add TW meta and proper site info

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-name: "Thanos Theodoridis Personal Website"
-description: ""
+namm: About - Thanos Theodoridis - Software Engineer
+description: Hello. I am Thanos. Node.js, Angular and iOS hacker. UX/UI Designer. Generalist, full-stack, real deal. I like startups, beer and women.
 
 url: http://localhost:8080
 
