--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 namm: About - Thanos Theodoridis - Software Engineer
 description: Hello. I am Thanos. Node.js, Angular and iOS hacker. UX/UI Designer. Generalist, full-stack, real deal. I like startups, beer and women.
+quote: “Success is walking from failure to failure with no loss of enthusiasm.”
 
 url: http://localhost:8080
 
