minor metadata fixes

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-name: "Thanos Theodoridis Personal Website"
-description: ""
+name: "Thanos Theodoridis"
+description: "My personal website"
 
 url: http://attheo.do
 
