changed site name to www.attheo.do

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 name: "Thanos Theodoridis"
 description: "My personal website"
 
-url: http://attheo.do
+url: http://www.attheo.do
 
 paginate: 10
 
