--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "devDependencies": {
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.33",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "@tailwindcss/typography": "^0.5.13"
   },
   "scripts": {
     "build:css": "tailwindcss -i ./src/styles/tailwind.css -o ./assets/css/main.css --minify",
